# cookiecutter-python

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Pipfile  README.md  SECURITY.md  Taskfile.yml  cookiecutter.json  setup.cfg  tasks.py
.github/: CODEOWNERS  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/etc/: dictionary.txt
.github/workflows/: ci.yml  commit.yml  pr.yml  release.yml  scheduled.yml  security.yml  update.yml
cookiecutter_python/: __init__.py
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_cookiecutter.py
{{cookiecutter.project_name|replace(" ", "")}}/: .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Pipfile  README.md  Taskfile.yaml  Taskfile.yml  main.py  setup.cfg  tasks.py
{{cookiecutter.project_name|replace(" ", "")}}/.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
{{cookiecutter.project_name|replace(" ", "")}}/.github/etc/: dictionary.txt
{{cookiecutter.project_name|replace(" ", "")}}/.github/workflows/: commit.yml  release.yml  security.yml  update.yml
{{cookiecutter.project_name}}/: .dockerignore  SECURITY.md
{{cookiecutter.project_name}}/.github/: CODEOWNERS
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: config.py
{{cookiecutter.project_slug|replace(" ", "")}}/: Dockerfile  pyproject.toml
{{cookiecutter.project_slug}}/: .dockerignore  CONTRIBUTING.md  Dockerfile  LICENSE  Pipfile  README.md  SECURITY.md  setup.cfg  tasks.py  {{cookiecutter.project_slug}}.py
(+18 files in other folders)
