[bumpversion]
current_version = 2023.08.09
parse = (?P<year>2[0-1]\d{2})\.(?P<month>(0\d|1[0-2]))(.(?P<increment>\d{2}))?
serialize = {year}.{month}.{increment}
commit = True
tag = True

[metadata]
author = "Seiso"
description = "The Seiso standard python cookiecutter template"
description-file = "README.md"
versioning = "CalVer"
license_file = "LICENSE"
name = "cookiecutter-python"
url = "https://github.com/SeisoLLC/cookiecutter-python"

[bumpversion:file:cookiecutter_python/__init__.py]
