[bumpversion]
{%- if cookiecutter.versioning == "CalVer" %}
current_version = {% now 'local', '%Y.%m.00' %}
parse = (?P<year>2[0-1]\d{2})\.(?P<month>(0\d|1[0-2]))(.(?P<increment>\d{2}))?
serialize = {year}.{month}.{increment}
{%- elif cookiecutter.versioning == "SemVer-ish" %}
current_version = 0.0.0
{%- endif %}
commit = True
tag = True

[metadata]
author = "Seiso"
description = "{{ cookiecutter.project_short_description }}"
description-file = "README.md"
versioning = "{{ cookiecutter.versioning.replace('-ish', '') }}"
{% if cookiecutter.license == 'MIT' -%}
license = "MIT"
{% elif cookiecutter.license == 'BSD-3' -%}
license = "BSD-3-Clause"
{% endif -%}
license_file = "LICENSE"
name = "{{ cookiecutter.project_slug }}"
url = "https://github.com/SeisoLLC/{{ cookiecutter.project_slug }}"

[bumpversion:file:{{ cookiecutter.project_slug }}/__init__.py]

[bumpversion:file:README.md]
